# stj-scraper

./: .gitignore  Makefile  README.md  pyproject.toml
src/stj_scraper/: __init__.py  client.py  database.py  logger.py  models.py  scraper.py
tests/: test_database.py  test_models.py  test_scraper.py
